# Deep_Learning_Examples

./: .gitignore  README.md  pyproject.toml  requirements.txt
House_Price_Predcition_Kaagle/: model.pt
House_Price_Predcition_Kaagle/data/: submission_1.csv
Housing/: House_Price_Prediction_NN_Kaagle.ipynb
MNIST/: mnist-classical-mlp.ipynb  model.pt
Shakespeare/: README.md  char-rnn.ipynb  pyproject.toml
Shakespeare_Poem_Maker/: poem_maker.ipynb
Shakespeare_Poem_Maker/research/: references.md
TimeSeries_Simulation/: auto_regressive.ipynb  sine_pred.ipynb
Titanic/: deep_learning_titanic.ipynb  model.pt
