[tool.poetry]
name = "deep_learning_examples"
version = "0.1.0"
description = ""
authors = ["Adriel Martins <adrielfalcao@gmail.com>"]
license = "The Unlicense"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"
torchvision = "^0.10.0"
pandas = "^1.2.5"
numpy = "^1.22.0"
matplotlib = "^3.4.2"
sklearn = "^0.0"
seaborn = "^0.11.1"
plotnine = "^0.8.0"
pytorch-lightning = "^1.5.6"
torch-tb-profiler = "^0.3.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
