[tool.poetry]
name = "udacity_computer_vision"
version = "0.1.0"
description = "Notebooks for the Udacity course on Computer Vision"
authors = ["martins6 <adrielfalcao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
numpy = "1.21.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
torch = "^1.10.1"
torchvision = "^0.11.2"
torchaudio = "^0.10.1"
jupyter = "^1.0.0"
pytorch-lightning = "^1.5.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
